# ConsoleTrees

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
src/: example.c  main.c
src/lib/: ConsoleTrees.h  types.h
src/lib/tools/: tree-methods.c  tree-methods.h
src/lib/utils/: calculators.c  calculators.h  helpers.c  helpers.h  types.h
src/lib/visualization/: helpers.visualization.c  helpers.visualization.h  logick.visualization.c  logick.visualization.h
